tests/paczka1/fuzzy1/30416095.err
Error in line 1: IQx8ejwA A636 79,4
Error in line 3: VeR58R S514 80,2
Error in line 5: VeR58R A558 0,9
Error in line 10: VeR58R A636 48,4
Error in line 30: BGOA S68 18,1
